--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <!--div que contiene el menu-->
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="/views/productos.html">Productos</a></li>
-        <li><a href="/views/presupuesto.html">Presupuesto</a></li>
-        <li><a href="/views/contacto.html">Contacto</a></li>
+        <li><a href="views/productos.html">Productos</a></li>
+        <li><a href="views/presupuesto.html">Presupuesto</a></li>
+        <li><a href="views/contacto.html">Contacto</a></li>
       </ul>  
     </nav>
        
