--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- Declaración de fichero de estilos -->
     <link rel="stylesheet" type="text/css" href="estilos/estilos.css">
     <title>Trabajo Final</title>
+     <!--Enlace al favicon-->
+     <link rel="icon" href="img/favicon.png" type="image/x-icon">
  </head>
   
  <body>
